--- a/book_social/public/auth/login.html
+++ b/book_social/public/auth/login.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="auth.css">
 </head>
 <body>
     <form id="loginForm">
+      <h2>Login</h2>
   <input id="email" placeholder="Email">
   <input id="password" type="password" placeholder="Password">
   <button>Login</button>
@@ -14,7 +16,7 @@
 </form>
 
 <script src="/api.js"></script>
-<script src="auth.js"></script>
+<script src="/auth/auth.js"></script>
 
 </body>
 </html>
