--- a/book_social/public/auth/register.html
+++ b/book_social/public/auth/register.html
@@ -10,9 +10,10 @@
     <input placeholder="Email" id="email" />
     <input placeholder="Password" type="password" id="password" />
     <button>Register</button>
+    <a href="login.html">Login</a>
   </form>
 
   <script src="../api.js"></script>
-  <script src="auth.js"></script>
+ <script src="/auth/auth.js"></script>
 </body>
 </html>
